@@ -1,3 +1,9 @@
+2003-09-23  JP Rosevear <jpr@ximian.com>
+
+	* cal-client/cal-client.h: remove enum, protos
+
+	* cal-client/cal-client.c: remove remove status enum typing
+
 2003-09-23  Rodrigo Moya <rodrigo@ximian.com>
 
 	* importers/icalendar-importer.c (update_objects): new function
